Make update evidence write Android compatible